Use threadId instead of getId