@@ -38,7 +38,7 @@ public class ReadURLTask implements Callable<String> {
         }
 
         long timeTakenMs = System.currentTimeMillis() - start;
-        String retMsg = "time >> " + timeTakenMs + "ms >> " + Thread.currentThread().getName() + " id : " + Thread.currentThread().getId() + " done.";
+        String retMsg = "time >> " + timeTakenMs + "ms >> " + Thread.currentThread().getName() + " id : " + Thread.currentThread().threadId() + " done.";
         return retMsg;
     }
 }
